--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,11 @@ section {
     height: 100vh;
     position:relative;
     z-index: 2;
+    padding: 45px;
+}
+
+a {
+    text-decoration: none;
 }
 
 
@@ -115,7 +120,6 @@ nav ul li {
 }
 
 nav a {
-    text-decoration: none;
     color: #fff;
     padding: 10px;
 }
@@ -123,4 +127,53 @@ nav a {
 nav a:hover{
     border-bottom: 1px solid #fff;
 }
+
+
+/* About */
+
+#about {
+    background-color: var(--azul-escuro);
+    display: flex;
+    color: #fff;
+}
+
+h3 {
+    font-family: "Gloria Hallelujah", cursive;
+    font-size: 3em;
+    margin-bottom: 20px;
+}
+
+.col-1 {
+    width: 35%;
+}
+
+.col-2 {
+    width: 65%;
+    display: flex;
+    align-items: center;
+}
+
+.icones {
+    margin-top: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.icone {
+    margin: 0 30px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.icone:hover {
+    filter: drop-shadow(0 0 10px white);
+}
+
+p {
+    text-align: justify;
+    text-indent: 2em;
+    font-size: 1.3em;
+    margin-bottom: 10px;
+}
+
 
