--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,9 +31,8 @@ html {
     left: 0;
 }
 
-#container {
+main {
     width: 100%;
-    min-height: 100vh;
 }
 
 
@@ -84,7 +83,7 @@ header {
 }
 
 
-#name {
+#title-name {
     position: absolute;
     bottom: 0;
     margin: 45px;
@@ -186,6 +185,9 @@ p {
 #technologies {
     background: rgb(2, 3, 11);
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .items {
@@ -193,6 +195,7 @@ p {
     flex-wrap: wrap;
     justify-content: center;
     align-items: stretch;
+    margin: 45px 0;
 }
 
 .item {
@@ -220,6 +223,10 @@ p {
     transform: rotateY(180deg);
 }
 
+.item:hover {
+    filter: brightness(0.9)
+}
+
 .face {
     width: 100%;
     height: 100%;
@@ -241,4 +248,77 @@ p {
 .tech-name {
     font-size: 24px;
     color: black;
+}
+
+
+/* Contact */
+
+#contacts {
+    background: #010E21;
+    background: url('../images/galaxy.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#contacts h3 {
+    margin-bottom: 45px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+}
+
+input, textarea {
+    padding: 10px 12px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 10px;
+    background: rgba(255, 255, 255, 0.886);
+}
+
+input:focus, textarea:focus {
+    outline: none;
+    border: none;
+}
+
+textarea {
+    resize: none;
+    height: 150px;
+}
+
+textarea::-webkit-scrollbar {
+    width: 8px;
+}
+
+textarea::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+textarea::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px;
+}
+
+textarea::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+button {
+    padding: 12px 12px;
+    border-radius: 10px;
+    background: #e01abc;
+    margin-bottom: 45px;
+}
+
+#contacts .icone {
+    margin: 0 30px;
+    color: rgba(255, 255, 255, 0.7);
 }
