--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,20 +156,46 @@ h2 {
     color: #fff;
 }
 
-h3 {
-    font-family: "Gloria Hallelujah", cursive;
-    font-size: 3em;
-    margin-bottom: 20px;
-}
-
 .col-1 {
     width: 35%;
+    padding: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.square-container {
+    width: 100%;
+    position: relative;
+    padding-bottom: 100%;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+#profile {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border-left: 0.8em solid white;
+    border-bottom: 0.8em solid white;
+    border-right: 0.8em dotted white;
+    border-top: 0.8em dotted white;
+}
+
+
 
 .col-2 {
     width: 65%;
     display: flex;
     align-items: center;
+}
+
+h3 {
+    font-family: "Gloria Hallelujah", cursive;
+    font-size: 3em;
+    margin-bottom: 20px;
 }
 
 .icones {
@@ -468,8 +494,13 @@ button {
 
 /* Responsividade */
 
-/* Projects */
 @media (max-width:1150px) {
+    /* About */
+    .col-1 {
+        padding: 10px 20px 10px 10px;
+    }
+    
+    /* Projects */
     #projects h3 {
         width: 90vw;
     }
@@ -482,6 +513,11 @@ button {
 @media (max-width:1024px) {
     .col-1, .col-2 {
         width: 100%;
+    }
+
+    .square-container {
+        width: 100%;
+        padding-bottom: 100%;
     }
 }
 
