--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,12 +292,17 @@ p {
 
 #projects {
     background: var(--dark-blue);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #projects h3 {
     color: var(--white);
     width: 900px;
-    margin: auto;
+    margin: 0 auto;
+    padding-bottom: 30px;
 }
 
 .slide {
@@ -315,7 +320,7 @@ p {
     border-radius: 40px;
     width: calc(100% - 80px);
     height: 80vh;
-    max-height: 650px;
+    /* max-height: 650px; */
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -336,9 +341,10 @@ p {
 
 .project-info {
     width: 50%;
-    padding: 30px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -357,8 +363,6 @@ h4 {
 }
 
 .project a {
-    position: absolute;
-    bottom: 45px;
     padding: 12px 30px;
     border-radius: 25px;
     background: var(--pink);
@@ -397,6 +401,10 @@ h4 {
 
 .prev:hover, .next:hover {
     background-color: rgba(0, 0, 0, 0.2);
+}
+
+.dots {
+    padding-top: 30px;
 }
 
 .dot {
@@ -535,17 +543,31 @@ button:hover {
 }
 
 /* Projects */
+@media (min-width:1015px) {
+    .project{
+        max-height: 650px;
+    }
+}
+
 @media (max-width:1015px) {
     .project{
-        height: 65vh;
+        min-height: 45vh;
+        height: fit-content;
     }
     .project-info {
         width: 100%;
+    }
+    .project-info h4 {
+        font-size: 2.2em;
+    }
+    .project-info p {
+        font-size: 1.6em;
     }
     .project-image {
         display: none;
     }
 }
+
 @media (max-width:945px) {
     #projects {
         padding-left: 20px;
@@ -566,25 +588,9 @@ button:hover {
     }
 }
 
-/* General */
-@media (max-width:885px) {
-    * {
-        font-size: 14px;
-    }    
-}
-
-@media (max-width:773px) {
-    * {
-        font-size: 12px;
-    }
-    /* About */
-    .col-2 {
-        height: min-content;
-    }
-}
 
 /* Menu */
-@media (max-width:692px) {
+@media (max-width:832px) {
     .visible {
         display: block;
     }
@@ -593,7 +599,7 @@ button:hover {
         flex-direction: column;
         position: fixed;
         top: 72px;
-        width: 220px;
+        width: 320px;
         max-width: 100%;
         background: rgba(0, 0, 0, 0.9);
         height: 100vh;
@@ -615,6 +621,21 @@ button:hover {
     nav ul li a:hover {
         border: none;
         color: #555
+    }
+}
+
+
+/* About */
+@media (max-width:773px) {
+    .col-2 {
+        height: min-content;
+    }
+}
+
+/* Projects */
+@media (max-width:750px) {
+    #projects p {
+        margin: 50px 0;
     }
 }
 
@@ -640,7 +661,7 @@ button:hover {
 /* General */
 @media (max-width:617px) {
     * {
-        font-size: 10px;
+        font-size: 16px;
     }
 }
 
@@ -673,6 +694,7 @@ button:hover {
         margin: 5px;
     }
 }
+
 
 /* About */
 
@@ -716,6 +738,23 @@ button:hover {
     .item {
         width: 100px;
         height: 100px;
+    }
+}
+
+/* Header */
+@media (max-width:400px) {
+    h1 {
+        font-size: 3.1em;
+    }
+    h2 {
+        font-size: 2em;
+    }
+    /* Projects */
+    .project-info h4 {
+        font-size: 1.6em;
+    }
+    .project-info p {
+        font-size: 1.2em;
     }
 }
 
