--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ nav ul li {
 }
 
 nav a {
-    font-size: 1.3em;
+    font-size: 1.2em;
     color: var(--white);
     padding: 10px;
     margin-left: 30px;
@@ -711,7 +711,7 @@ button:hover {
         margin: 20px;
     }
     /* General */
-    h3 {
+    h3, h4 {
         text-align: center;
     }
     section {
